@@ -1,49 +1,49 @@
 package org.uniquindio.repository.impl;
 
-import org.uniquindio.model.dto.PreguntaExamenDTO; // Para pasar detalles de preguntas al crear/actualizar examen
-import org.uniquindio.model.dto.PreguntaPresentacionDTO; // Para mostrar preguntas al estudiante
-import org.uniquindio.model.dto.ResultadoExamenDTO; // Para mostrar resultados al estudiante
-import org.uniquindio.model.dto.DetalleRespuestaPreguntaDTO; // Para el desglose de resultados
+import oracle.jdbc.OracleTypes;
+import oracle.sql.ARRAY;
+import oracle.sql.ArrayDescriptor;
+import oracle.sql.STRUCT;
+import oracle.sql.StructDescriptor;
+import org.uniquindio.model.dto.DetalleRespuestaPreguntaDTO;
+import org.uniquindio.model.dto.PreguntaExamenDTO;
+import org.uniquindio.model.dto.PreguntaPresentacionDTO;
+import org.uniquindio.model.dto.ResultadoExamenDTO;
 import org.uniquindio.model.entity.evaluacion.Examen;
-import org.uniquindio.model.entity.evaluacion.Pregunta; // Si es necesario para algún mapeo
-import org.uniquindio.model.entity.evaluacion.PresentacionExamen; // Para registrar intentos
-
-// Importa ConnectionOracle para la conexión
-// import org.uniquindio.repository.impl.ConnectionOracle;
+// import org.uniquindio.model.entity.evaluacion.Pregunta; // Descomentar si es necesario
+// import org.uniquindio.model.entity.evaluacion.PresentacionExamen; // Descomentar si es necesario
 
 import java.sql.*;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.math.BigDecimal; // Para manejar calificaciones y porcentajes
-import java.util.Collections; // Para lista vacía si es necesario
+import java.math.BigDecimal;
 
-public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenRepository
+public class ExamenRepositoryImpl {
 
-    // Nombres de ejemplo para paquetes y funciones/procedimientos PL/SQL
-    // Deberás ajustarlos a tu implementación real en la base de datos.
     private static final String PAQUETE_GESTION_EXAMENES = "PAQUETE_GESTION_EXAMENES";
     private static final String PROC_CREAR_EXAMEN_COMPLETO = "CREAR_EXAMEN_COMPLETO";
     private static final String PROC_ACTUALIZAR_EXAMEN_COMPLETO = "ACTUALIZAR_EXAMEN_COMPLETO";
     private static final String FUNC_OBTENER_EXAMEN_POR_ID = "OBTENER_EXAMEN_POR_ID";
     private static final String FUNC_LISTAR_EXAMENES_PROFESOR = "LISTAR_EXAMENES_POR_PROFESOR";
     private static final String FUNC_LISTAR_EXAMENES_DISPONIBLES_EST = "LISTAR_EXAMENES_DISPONIBLES_EST";
-    private static final String PROC_ELIMINAR_EXAMEN = "ELIMINAR_EXAMEN_POR_ID";
-    private static final String FUNC_OBTENER_PREGUNTAS_EXAMEN_DTO = "OBTENER_PREGUNTAS_EXAMEN_DTO"; // Para editar examen
+    private static final String PROC_ELIMINAR_EXAMEN = "ELIMINAR_EXAMEN_POR_ID"; // Asumiendo que existe
+    private static final String FUNC_OBTENER_PREGUNTAS_EXAMEN_DTO = "OBTENER_PREGUNTAS_EXAMEN_DTO";
 
     private static final String PAQUETE_PRESENTACION_EXAMEN = "PAQUETE_PRESENTACION_EXAMEN";
-    private static final String FUNC_INICIAR_PRESENTACION = "INICIAR_PRESENTACION_EXAMEN"; // Devuelve ID de PresentacionExamen
-    private static final String FUNC_OBTENER_PREGUNTAS_PARA_PRESENTACION = "OBTENER_PREGUNTAS_PARA_PRESENTACION"; // Devuelve PreguntaPresentacionDTO
+    private static final String FUNC_INICIAR_PRESENTACION = "INICIAR_PRESENTACION_EXAMEN";
+    private static final String FUNC_OBTENER_PREGUNTAS_PARA_PRESENTACION = "OBTENER_PREGUNTAS_PARA_PRESENTACION";
     private static final String PROC_REGISTRAR_RESPUESTA = "REGISTRAR_RESPUESTA_ESTUDIANTE";
-    // Este procedimiento ahora se encarga de calcular y devolver los datos resumen.
     private static final String PROC_FINALIZAR_Y_CALIFICAR = "FINALIZAR_Y_CALIFICAR_EXAMEN";
-    // Esta función se usará para obtener el desglose detallado de las respuestas.
     private static final String FUNC_OBTENER_RESULTADOS_DETALLADOS = "OBTENER_RESULTADOS_DETALLADOS";
 
-
-    private static final String PAQUETE_ESTADISTICAS_EXAMEN = "PAQUETE_ESTADISTICAS_EXAMEN"; // Para resúmenes
+    private static final String PAQUETE_ESTADISTICAS_EXAMEN = "PAQUETE_ESTADISTICAS_EXAMEN";
     private static final String FUNC_CONTAR_PROXIMOS_EXAMENES_EST = "CONTAR_PROXIMOS_EXAMENES_EST";
-    private static final String FUNC_OBTENER_ULTIMO_RESULTADO_EST = "OBTENER_ULTIMO_RESULTADO_EST"; // Podría devolver un DTO o String
+    private static final String FUNC_OBTENER_ULTIMO_RESULTADO_EST = "OBTENER_ULTIMO_RESULTADO_EST";
     private static final String FUNC_CONTAR_EXAMENES_PROFESOR = "CONTAR_EXAMENES_POR_PROFESOR";
+
+    private static final String T_REGISTRO_PREGUNTA_EXAMEN_SQL = "T_REGISTRO_PREGUNTA_EXAMEN";
+    private static final String T_ARRAY_PREGUNTA_EXAMEN_SQL = "T_ARRAY_PREGUNTA_EXAMEN_TYPE";
 
 
     /**
@@ -52,67 +52,135 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
      *
      * @param examen El objeto Examen con la información general.
      * @param preguntasParaExamen Lista de DTOs con las preguntas y sus porcentajes para este examen.
+     * Si examen.getCreacionId() es para automático, esta lista puede ser vacía/null
+     * y el PL/SQL se encargará de seleccionar preguntas.
      * @param cedulaProfesor Cédula del profesor que crea el examen.
-     * @param seleccionAutomatica True si las preguntas se seleccionan automáticamente por el sistema.
      * @return El ID del examen creado.
      * @throws SQLException Si ocurre un error de base de datos.
      */
-    public int crearExamenCompleto(Examen examen, List<PreguntaExamenDTO> preguntasParaExamen, long cedulaProfesor, boolean seleccionAutomatica) throws SQLException {
-        String sql = String.format("{call %s.%s(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)}", // Ajusta el número de '?' según tu PL/SQL
+    public int crearExamenCompleto(Examen examen, List<PreguntaExamenDTO> preguntasParaExamen, long cedulaProfesor) throws SQLException {
+        // Parámetros PL/SQL: p_nombre_examen, p_descripcion_examen, p_curso_id, p_categoria_id,
+        // p_fecha_presentacion, p_hora_presentacion, p_tiempo_duracion, p_num_preguntas_estudiante,
+        // p_calif_min_aprobatoria, p_peso_curso, p_creacion_id, p_cedula_profesor,
+        // p_preguntas_detalle, p_id_examen_out
+        String sql = String.format("{call %s.%s(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)}",
                 PAQUETE_GESTION_EXAMENES, PROC_CREAR_EXAMEN_COMPLETO);
+
         try (Connection conn = ConnectionOracle.conectar();
              CallableStatement cstmt = conn.prepareCall(sql)) {
 
-            cstmt.setString(1, examen.getDescripcion());
-            cstmt.setInt(2, examen.getCursoId());
-            cstmt.setInt(3, examen.getCategoriaId());
-            cstmt.setDate(4, new java.sql.Date(examen.getFecha().getTime()));
-            cstmt.setTimestamp(5, new java.sql.Timestamp(examen.getHora().getTime()));
-            cstmt.setInt(6, examen.getTiempo());
-            cstmt.setInt(7, examen.getNumeroPreguntas());
-            cstmt.setBigDecimal(8, examen.getCalificacionMinAprobatoria());
-            cstmt.setBigDecimal(9, examen.getPesoCurso());
-            cstmt.setInt(10, examen.getCreacionId());
-            cstmt.setLong(11, cedulaProfesor);
-            // Para p_preguntas_detalle, si es una colección Oracle:
-            // ArrayDescriptor descriptor = ArrayDescriptor.createDescriptor("T_ARRAY_PREGUNTA_EXAMEN_TYPE", conn);
-            // ARRAY array_of_details = new ARRAY(descriptor, conn, preguntasParaExamen.toArray()); // Necesitarías convertir DTO a un tipo compatible
-            // cstmt.setArray(12, array_of_details);
-            // Si no, este parámetro podría no existir y la lógica de detalle se maneja después.
-            // Por ahora, asumimos que el PL/SQL lo maneja o se llama a otro procedimiento.
-            // Si p_preguntas_detalle no se pasa así, ajusta el número de '?' y los índices.
+            cstmt.setString(1, examen.getNombre());
+            cstmt.setString(2, examen.getDescripcion());
+            cstmt.setInt(3, examen.getCursoId());
+            cstmt.setInt(4, examen.getCategoriaId());
+            cstmt.setDate(5, new java.sql.Date(examen.getFecha().getTime()));
+            cstmt.setTimestamp(6, new java.sql.Timestamp(examen.getHora().getTime())); // Usar Timestamp para DATE con hora
+            cstmt.setInt(7, examen.getTiempo());
+            cstmt.setInt(8, examen.getNumeroPreguntas());
+            cstmt.setBigDecimal(9, examen.getCalificacionMinAprobatoria());
+            cstmt.setBigDecimal(10, examen.getPesoCurso());
+            cstmt.setInt(11, examen.getCreacionId());
+            cstmt.setLong(12, cedulaProfesor);
 
-            cstmt.registerOutParameter(12, Types.INTEGER); // p_id_examen_out (ajusta el índice si cambiaste el anterior)
+            // Preparar la colección de detalles de preguntas
+            ArrayDescriptor arrayDesc = ArrayDescriptor.createDescriptor(T_ARRAY_PREGUNTA_EXAMEN_SQL.toUpperCase(), conn);
+            StructDescriptor structDesc = StructDescriptor.createDescriptor(T_REGISTRO_PREGUNTA_EXAMEN_SQL.toUpperCase(), conn);
+            STRUCT[] preguntasStructArray = null;
 
-            cstmt.executeUpdate();
-            int idExamenCreado = cstmt.getInt(12); // Ajusta el índice
-
-            if (idExamenCreado > 0) {
-                if (!seleccionAutomatica && preguntasParaExamen != null && !preguntasParaExamen.isEmpty()) {
-                    // Llama a un procedimiento para asignar cada pregunta manualmente
-                    // PROC_ASIGNAR_PREGUNTA_A_EXAMEN(idExamenCreado, dto.getIdPregunta(), dto.getPorcentaje())
-                } else if (seleccionAutomatica) {
-                    // Llama a un procedimiento para agregar preguntas equilibradas
-                    // PROC_AGREGAR_PREGUNTAS_EQUILIBRADAS_EXAMEN(idExamenCreado, examen.getNumeroPreguntas())
+            if (preguntasParaExamen != null && !preguntasParaExamen.isEmpty()) {
+                preguntasStructArray = new STRUCT[preguntasParaExamen.size()];
+                for (int i = 0; i < preguntasParaExamen.size(); i++) {
+                    PreguntaExamenDTO dto = preguntasParaExamen.get(i);
+                    Object[] attribs = new Object[]{
+                            BigDecimal.valueOf(dto.getIdPregunta()), // p_id_pregunta NUMBER
+                            BigDecimal.valueOf(dto.getPorcentaje())  // p_porcentaje NUMBER(5,2)
+                    };
+                    preguntasStructArray[i] = new STRUCT(structDesc, conn, attribs);
                 }
             }
-            return idExamenCreado;
+            ARRAY arraySqlPreguntas = new ARRAY(arrayDesc, conn, preguntasStructArray);
+            cstmt.setArray(13, arraySqlPreguntas);
+
+            cstmt.registerOutParameter(14, Types.INTEGER); // p_id_examen_out
+
+            cstmt.executeUpdate();
+            return cstmt.getInt(14);
         }
     }
 
-    public boolean actualizarExamenCompleto(Examen examen, List<PreguntaExamenDTO> preguntasParaExamen, boolean seleccionAutomatica) throws SQLException {
-        System.out.println("Simulando actualización de examen: " + examen.getId());
-        return true; // Placeholder
+    /**
+     * Actualiza un examen existente y sus detalles de preguntas.
+     * Llama a un procedimiento PL/SQL.
+     *
+     * @param examen El objeto Examen con los datos actualizados.
+     * @param preguntasParaExamen Lista de DTOs con las nuevas preguntas y sus porcentajes.
+     * Si examen.getCreacionId() es para automático, esta lista puede ser vacía/null.
+     * @return true si la actualización fue exitosa, false en caso contrario (o lanza excepción).
+     * @throws SQLException Si ocurre un error de base de datos.
+     */
+    public boolean actualizarExamenCompleto(Examen examen, List<PreguntaExamenDTO> preguntasParaExamen) throws SQLException {
+        // Parámetros PL/SQL: p_id_examen, p_nombre_examen, p_descripcion_examen, p_curso_id, p_categoria_id,
+        // p_fecha_presentacion, p_hora_presentacion, p_tiempo_duracion, p_num_preguntas_estudiante,
+        // p_calif_min_aprobatoria, p_peso_curso, p_creacion_id,
+        // p_preguntas_detalle (y un parámetro para el usuario que modifica, si lo tienes)
+        // Asumimos que el PL/SQL no necesita p_cedula_profesor para actualizar,
+        // pero sí podría necesitar un p_usuario_modificacion.
+        String sql = String.format("{call %s.%s(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)}", // 13 parámetros
+                PAQUETE_GESTION_EXAMENES, PROC_ACTUALIZAR_EXAMEN_COMPLETO);
+
+        try (Connection conn = ConnectionOracle.conectar();
+             CallableStatement cstmt = conn.prepareCall(sql)) {
+
+            cstmt.setInt(1, examen.getId());
+            cstmt.setString(2, examen.getNombre());
+            cstmt.setString(3, examen.getDescripcion());
+            cstmt.setInt(4, examen.getCursoId());
+            cstmt.setInt(5, examen.getCategoriaId());
+            cstmt.setDate(6, new java.sql.Date(examen.getFecha().getTime()));
+            cstmt.setTimestamp(7, new java.sql.Timestamp(examen.getHora().getTime()));
+            cstmt.setInt(8, examen.getTiempo());
+            cstmt.setInt(9, examen.getNumeroPreguntas());
+            cstmt.setBigDecimal(10, examen.getCalificacionMinAprobatoria());
+            cstmt.setBigDecimal(11, examen.getPesoCurso());
+            cstmt.setInt(12, examen.getCreacionId());
+
+            ArrayDescriptor arrayDesc = ArrayDescriptor.createDescriptor(T_ARRAY_PREGUNTA_EXAMEN_SQL.toUpperCase(), conn);
+            StructDescriptor structDesc = StructDescriptor.createDescriptor(T_REGISTRO_PREGUNTA_EXAMEN_SQL.toUpperCase(), conn);
+            STRUCT[] preguntasStructArray = null;
+
+            if (preguntasParaExamen != null && !preguntasParaExamen.isEmpty()) {
+                preguntasStructArray = new STRUCT[preguntasParaExamen.size()];
+                for (int i = 0; i < preguntasParaExamen.size(); i++) {
+                    PreguntaExamenDTO dto = preguntasParaExamen.get(i);
+                    Object[] attribs = new Object[]{
+                            BigDecimal.valueOf(dto.getIdPregunta()),
+                            BigDecimal.valueOf(dto.getPorcentaje())
+                    };
+                    preguntasStructArray[i] = new STRUCT(structDesc, conn, attribs);
+                }
+            }
+            ARRAY arraySqlPreguntas = new ARRAY(arrayDesc, conn, preguntasStructArray);
+            cstmt.setArray(13, arraySqlPreguntas);
+
+            // Si tu PL/SQL tiene un parámetro OUT para filas afectadas:
+            // cstmt.registerOutParameter(14, Types.INTEGER);
+            // cstmt.executeUpdate();
+            // return cstmt.getInt(14) > 0;
+
+            cstmt.executeUpdate();
+            return true; // Asumir éxito si no hay excepción. El PL/SQL debería lanzar error si falla.
+        }
     }
 
     public Examen obtenerExamenConDetallesPorId(int examenId) throws SQLException {
         Examen examen = null;
+        // Asumiendo que tu entidad Examen tiene un campo 'nombre'
         String sqlExamen = String.format("{? = call %s.%s(?)}", PAQUETE_GESTION_EXAMENES, FUNC_OBTENER_EXAMEN_POR_ID);
 
         try (Connection conn = ConnectionOracle.conectar();
              CallableStatement cstmtExamen = conn.prepareCall(sqlExamen)) {
 
-            cstmtExamen.registerOutParameter(1, Types.REF_CURSOR);
+            cstmtExamen.registerOutParameter(1, OracleTypes.CURSOR);
             cstmtExamen.setInt(2, examenId);
             cstmtExamen.execute();
 
@@ -120,10 +188,11 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
                 if (rsExamen != null && rsExamen.next()) {
                     examen = new Examen();
                     examen.setId(rsExamen.getInt("ID"));
+                    examen.setNombre(rsExamen.getString("NOMBRE")); // Leer el nombre
                     examen.setTiempo(rsExamen.getObject("TIEMPO", Integer.class));
                     examen.setNumeroPreguntas(rsExamen.getObject("NUMERO_PREGUNTAS", Integer.class));
                     examen.setFecha(rsExamen.getDate("FECHA"));
-                    examen.setHora(rsExamen.getTimestamp("HORA"));
+                    examen.setHora(rsExamen.getTimestamp("HORA")); // Usar getTimestamp si es DATE con hora
                     examen.setCalificacionMinAprobatoria(rsExamen.getBigDecimal("CALIFICACION_MIN_APROBATORIA"));
                     examen.setPesoCurso(rsExamen.getBigDecimal("PESO_CURSO"));
                     examen.setDescripcion(rsExamen.getString("DESCRIPCION"));
@@ -136,7 +205,7 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
         return examen;
     }
 
-    public List<PreguntaExamenDTO> obtenerPreguntasDeExamenDTO(int examenId, Connection... existingConn) throws SQLException {
+    public List<PreguntaExamenDTO> obtenerPreguntasDeExamenDTO(int examenId) throws SQLException {
         List<PreguntaExamenDTO> preguntas = new ArrayList<>();
         String sql = String.format("{? = call %s.%s(?)}", PAQUETE_GESTION_EXAMENES, FUNC_OBTENER_PREGUNTAS_EXAMEN_DTO);
         Connection conn = null;
@@ -144,9 +213,9 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
         ResultSet rs = null;
 
         try {
-            conn = (existingConn.length > 0 && existingConn[0] != null) ? existingConn[0] : ConnectionOracle.conectar();
+            conn = ConnectionOracle.conectar(); // Siempre crear nueva conexión si no se pasa una
             cstmt = conn.prepareCall(sql);
-            cstmt.registerOutParameter(1, Types.REF_CURSOR);
+            cstmt.registerOutParameter(1, OracleTypes.CURSOR);
             cstmt.setInt(2, examenId);
             cstmt.execute();
             rs = (ResultSet) cstmt.getObject(1);
@@ -160,24 +229,66 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
                 ));
             }
         } finally {
-            if (rs != null) rs.close();
-            if (cstmt != null) cstmt.close();
-            if (existingConn.length == 0 || existingConn[0] == null) {
-                if (conn != null) conn.close();
-            }
+            if (rs != null) try { rs.close(); } catch (SQLException e) { /* ignore */ }
+            if (cstmt != null) try { cstmt.close(); } catch (SQLException e) { /* ignore */ }
+            if (conn != null) try { conn.close(); } catch (SQLException e) { /* ignore */ }
         }
         return preguntas;
     }
 
     public List<Examen> listarExamenesPorProfesor(long cedulaProfesor) throws SQLException {
         List<Examen> examenes = new ArrayList<>();
-        // TODO: Implementar llamada a FUNC_LISTAR_EXAMENES_PROFESOR
+        String sql = String.format("{? = call %s.%s(?)}", PAQUETE_GESTION_EXAMENES, FUNC_LISTAR_EXAMENES_PROFESOR);
+        try (Connection conn = ConnectionOracle.conectar();
+             CallableStatement cstmt = conn.prepareCall(sql)) {
+            cstmt.registerOutParameter(1, OracleTypes.CURSOR);
+            cstmt.setLong(2, cedulaProfesor);
+            cstmt.execute();
+            try (ResultSet rs = (ResultSet) cstmt.getObject(1)) {
+                while (rs != null && rs.next()) {
+                    Examen examen = new Examen();
+                    examen.setId(rs.getInt("ID_EXAMEN")); // Ajustar nombres de columna según tu PL/SQL
+                    examen.setNombre(rs.getString("NOMBRE_EXAMEN"));
+                    examen.setDescripcion(rs.getString("DESCRIPCION_EXAMEN"));
+                    // ... mapear las demás columnas que devuelve tu función ...
+                    // examen.setNombreCurso(rs.getString("NOMBRE_CURSO")); // Si el PL/SQL hace el JOIN
+                    examenes.add(examen);
+                }
+            }
+        }
         return examenes;
     }
 
     public List<Examen> listarExamenesDisponiblesParaEstudiante(long cedulaEstudiante, Integer cursoId) throws SQLException {
         List<Examen> examenes = new ArrayList<>();
-        // TODO: Implementar llamada a FUNC_LISTAR_EXAMENES_DISPONIBLES_EST
+        String sql = String.format("{? = call %s.%s(?, ?)}", PAQUETE_GESTION_EXAMENES, FUNC_LISTAR_EXAMENES_DISPONIBLES_EST);
+        try (Connection conn = ConnectionOracle.conectar();
+             CallableStatement cstmt = conn.prepareCall(sql)) {
+            cstmt.registerOutParameter(1, OracleTypes.CURSOR);
+            cstmt.setLong(2, cedulaEstudiante);
+            if (cursoId != null) {
+                cstmt.setInt(3, cursoId);
+            } else {
+                cstmt.setNull(3, Types.INTEGER);
+            }
+            cstmt.execute();
+            try (ResultSet rs = (ResultSet) cstmt.getObject(1)) {
+                while (rs != null && rs.next()) {
+                    Examen examen = new Examen();
+                    // Mapear columnas devueltas por FUNC_LISTAR_EXAMENES_DISPONIBLES_EST
+                    examen.setId(rs.getInt("ID")); // Asumiendo que devuelve las columnas de la tabla EXAMEN
+                    examen.setNombre(rs.getString("NOMBRE"));
+                    examen.setDescripcion(rs.getString("DESCRIPCION"));
+                    examen.setFecha(rs.getDate("FECHA"));
+                    examen.setHora(rs.getTimestamp("HORA"));
+                    examen.setTiempo(rs.getObject("TIEMPO", Integer.class));
+                    examen.setNumeroPreguntas(rs.getObject("NUMERO_PREGUNTAS", Integer.class));
+                    examen.setCursoId(rs.getObject("CURSO_ID", Integer.class));
+                    // ... y cualquier otra columna necesaria para el DTO ExamenDisponibleDTO
+                    examenes.add(examen);
+                }
+            }
+        }
         return examenes;
     }
 
@@ -199,23 +310,29 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
         String sql = String.format("{? = call %s.%s(?)}", PAQUETE_PRESENTACION_EXAMEN, FUNC_OBTENER_PREGUNTAS_PARA_PRESENTACION);
         try (Connection conn = ConnectionOracle.conectar();
              CallableStatement cstmt = conn.prepareCall(sql)) {
-            cstmt.registerOutParameter(1, Types.REF_CURSOR);
+            cstmt.registerOutParameter(1, OracleTypes.CURSOR);
             cstmt.setInt(2, presentacionExamenId);
             cstmt.execute();
             try (ResultSet rs = (ResultSet) cstmt.getObject(1)) {
                 while (rs != null && rs.next()) {
-                    // Asumiendo que el PL/SQL devuelve estas columnas:
-                    // ID_PREGUNTA_EXAMEN_ESTUDIANTE, TEXTO_PREGUNTA, NOMBRE_TIPO_PREGUNTA, ID_TIPO_PREGUNTA, TIEMPO_SUGERIDO
-                    // Y una forma de obtener las opciones (ej. un cursor anidado o una función separada)
                     int peeId = rs.getInt("ID_PREGUNTA_EXAMEN_ESTUDIANTE");
                     String texto = rs.getString("TEXTO_PREGUNTA");
                     String tipoNombre = rs.getString("NOMBRE_TIPO_PREGUNTA");
                     Integer tipoId = rs.getObject("ID_TIPO_PREGUNTA", Integer.class);
                     String tiempoSugerido = rs.getString("TIEMPO_SUGERIDO_PREGUNTA");
 
-                    // TODO: Obtener las opciones para esta pregunta (si tipoId lo requiere)
-                    List<PreguntaPresentacionDTO.OpcionPresentacionDTO> opciones = new ArrayList<>(); // obtenerOpcionesParaPreguntaPresentacion(peeId, conn);
-
+                    List<PreguntaPresentacionDTO.OpcionPresentacionDTO> opciones = new ArrayList<>();
+                    // Lógica para obtener opciones si el cursor anidado OPCIONES_CURSOR es devuelto
+                    ResultSet rsOpciones = (ResultSet) rs.getObject("OPCIONES_CURSOR"); // Ajusta el nombre de la columna del cursor
+                    if (rsOpciones != null) {
+                        while(rsOpciones.next()){
+                            opciones.add(new PreguntaPresentacionDTO.OpcionPresentacionDTO(
+                                    rsOpciones.getInt("ID_OPCION"), // Ajusta nombres de columna
+                                    rsOpciones.getString("TEXTO_OPCION") // Ajusta nombres de columna
+                            ));
+                        }
+                        rsOpciones.close();
+                    }
                     preguntas.add(new PreguntaPresentacionDTO(peeId, texto, tipoNombre, tipoId, opciones, tiempoSugerido));
                 }
             }
@@ -243,13 +360,6 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
         }
     }
 
-    /**
-     * Finaliza un intento de examen, obtiene la calificación y los detalles de las respuestas.
-     * Llama a un procedimiento PL/SQL para obtener el resumen y a una función para los detalles.
-     * @param presentacionExamenId El ID del intento de examen.
-     * @return Un objeto ResultadoExamenDTO con la nota, correctas, incorrectas y el detalle de cada respuesta.
-     * @throws SQLException Si ocurre un error de base de datos.
-     */
     public ResultadoExamenDTO finalizarYCalificarExamen(int presentacionExamenId) throws SQLException {
         BigDecimal calificacionFinal = BigDecimal.ZERO;
         int respuestasCorrectas = 0;
@@ -258,26 +368,23 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
         int totalPreguntasExamen = 0;
         String mensajeFeedbackGeneral = "";
         String nombreExamen = "";
-        String fechaPresentacionStr = ""; // Fecha formateada
+        String fechaPresentacionStr = "";
 
-        // Paso 1: Llamar al procedimiento PL/SQL para finalizar, calificar y obtener el resumen.
-        // PL/SQL: PROC_FINALIZAR_Y_CALIFICAR(p_id_presentacion_examen IN NUMBER,
-        //                                   p_calificacion_final_out OUT NUMBER, p_resp_correctas_out OUT NUMBER, ...)
         String sqlFinalizar = String.format("{call %s.%s(?, ?, ?, ?, ?, ?, ?, ?, ?)}",
                 PAQUETE_PRESENTACION_EXAMEN, PROC_FINALIZAR_Y_CALIFICAR);
 
-        try (Connection conn = ConnectionOracle.conectar(); // Se usará para ambas llamadas
+        try (Connection conn = ConnectionOracle.conectar();
              CallableStatement cstmtFinalizar = conn.prepareCall(sqlFinalizar)) {
 
             cstmtFinalizar.setInt(1, presentacionExamenId);
-            cstmtFinalizar.registerOutParameter(2, Types.NUMERIC); // p_calificacion_final_out
-            cstmtFinalizar.registerOutParameter(3, Types.INTEGER); // p_resp_correctas_out
-            cstmtFinalizar.registerOutParameter(4, Types.INTEGER); // p_resp_incorrectas_out
-            cstmtFinalizar.registerOutParameter(5, Types.INTEGER); // p_preguntas_respondidas_out
-            cstmtFinalizar.registerOutParameter(6, Types.INTEGER); // p_total_preguntas_examen_out
-            cstmtFinalizar.registerOutParameter(7, Types.VARCHAR); // p_mensaje_feedback_out
-            cstmtFinalizar.registerOutParameter(8, Types.VARCHAR); // p_nombre_examen_out
-            cstmtFinalizar.registerOutParameter(9, Types.VARCHAR); // p_fecha_presentacion_out
+            cstmtFinalizar.registerOutParameter(2, Types.NUMERIC);
+            cstmtFinalizar.registerOutParameter(3, Types.INTEGER);
+            cstmtFinalizar.registerOutParameter(4, Types.INTEGER);
+            cstmtFinalizar.registerOutParameter(5, Types.INTEGER);
+            cstmtFinalizar.registerOutParameter(6, Types.INTEGER);
+            cstmtFinalizar.registerOutParameter(7, Types.VARCHAR);
+            cstmtFinalizar.registerOutParameter(8, Types.VARCHAR);
+            cstmtFinalizar.registerOutParameter(9, Types.VARCHAR);
 
             cstmtFinalizar.execute();
 
@@ -290,7 +397,6 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
             nombreExamen = cstmtFinalizar.getString(8);
             fechaPresentacionStr = cstmtFinalizar.getString(9);
 
-            // Paso 2: Obtener el detalle de las respuestas
             List<DetalleRespuestaPreguntaDTO> detallesRespuestas = obtenerDetallesRespuestas(presentacionExamenId, conn);
 
             return new ResultadoExamenDTO(calificacionFinal, respuestasCorrectas, respuestasIncorrectas,
@@ -300,41 +406,43 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
 
         } catch (SQLException e) {
             System.err.println("Error al finalizar y calificar el examen ID: " + presentacionExamenId);
-            throw e; // Relanzar la excepción para que la capa superior la maneje
+            throw e;
         }
     }
 
-    /**
-     * Método auxiliar para obtener el desglose detallado de las respuestas.
-     * Llama a la función PL/SQL FUNC_OBTENER_RESULTADOS_DETALLADOS.
-     */
     private List<DetalleRespuestaPreguntaDTO> obtenerDetallesRespuestas(int presentacionExamenId, Connection conn) throws SQLException {
         List<DetalleRespuestaPreguntaDTO> detalles = new ArrayList<>();
-        // PL/SQL: FUNC_OBTENER_RESULTADOS_DETALLADOS(p_id_presentacion_examen IN NUMBER) RETURN SYS_REFCURSOR;
-        // El cursor debe devolver: ID_PREGUNTA_EXAMEN_ESTUDIANTE, TEXTO_PREGUNTA, NOMBRE_TIPO_PREGUNTA,
-        // RESPUESTA_ESTUDIANTE, OPCIONES_CORRECTAS_TEXTO (concatenado o necesitarás otra lógica),
-        // OPCIONES_CORRECTAS_ID (concatenado o necesitarás otra lógica), ES_CORRECTA (0/1), FEEDBACK_ESPECIFICO
         String sqlDetalles = String.format("{? = call %s.%s(?)}", PAQUETE_PRESENTACION_EXAMEN, FUNC_OBTENER_RESULTADOS_DETALLADOS);
 
         try (CallableStatement cstmtDetalles = conn.prepareCall(sqlDetalles)) {
-            cstmtDetalles.registerOutParameter(1, Types.REF_CURSOR);
+            cstmtDetalles.registerOutParameter(1, OracleTypes.CURSOR);
             cstmtDetalles.setInt(2, presentacionExamenId);
             cstmtDetalles.execute();
 
             try (ResultSet rs = (ResultSet) cstmtDetalles.getObject(1)) {
                 while (rs != null && rs.next()) {
-                    // TODO: Mapear las columnas del ResultSet a DetalleRespuestaPreguntaDTO
-                    // Esto es un ejemplo, ajusta según las columnas que devuelva tu PL/SQL
                     int peeId = rs.getInt("ID_PREGUNTA_EXAMEN_ESTUDIANTE");
                     String textoP = rs.getString("TEXTO_PREGUNTA");
                     String tipoP = rs.getString("NOMBRE_TIPO_PREGUNTA");
-                    String respEst = rs.getString("RESPUESTA_ESTUDIANTE"); // Puede ser ID de opción o texto
+                    String respEst = rs.getString("RESPUESTA_ESTUDIANTE");
 
-                    // Para opcionesCorrectasTexto y opcionesCorrectasId, el PL/SQL podría devolverlas
-                    // como una cadena separada por comas, o podrías necesitar una subconsulta/función
-                    // para cada pregunta si son múltiples.
-                    List<String> optCorrectasTexto = Collections.singletonList(rs.getString("OPCIONES_CORRECTAS_TEXTO")); // Simplificado
-                    List<Integer> optCorrectasId = Collections.emptyList(); // Simplificado, llenar si aplica
+                    // Para OPCIONES_CORRECTAS_TEXTO y OPCIONES_CORRECTAS_ID,
+                    // si el PL/SQL devuelve una cadena separada por comas, necesitas parsearla.
+                    String opcionesCorrectasTextoStr = rs.getString("OPCIONES_CORRECTAS_TEXTO");
+                    List<String> optCorrectasTexto = (opcionesCorrectasTextoStr != null && !opcionesCorrectasTextoStr.isEmpty()) ?
+                            List.of(opcionesCorrectasTextoStr.split("\\s*,\\s*")) : Collections.emptyList();
+
+                    String opcionesCorrectasIdStr = rs.getString("OPCIONES_CORRECTAS_ID");
+                    List<Integer> optCorrectasId = new ArrayList<>();
+                    if (opcionesCorrectasIdStr != null && !opcionesCorrectasIdStr.isEmpty()) {
+                        for (String idStr : opcionesCorrectasIdStr.split("\\s*,\\s*")) {
+                            try {
+                                optCorrectasId.add(Integer.parseInt(idStr.trim()));
+                            } catch (NumberFormatException e) {
+                                System.err.println("Error parseando ID de opción correcta: " + idStr);
+                            }
+                        }
+                    }
 
                     boolean esCorrecta = rs.getInt("ES_CORRECTA_LA_RESPUESTA") == 1;
                     String feedback = rs.getString("FEEDBACK_ESPECIFICO_PREGUNTA");
@@ -367,7 +475,8 @@ public class ExamenRepositoryImpl { // Podrías implementar una interfaz ExamenR
             cstmt.registerOutParameter(1, Types.VARCHAR);
             cstmt.setLong(2, cedulaEstudiante);
             cstmt.execute();
-            return cstmt.getString(1);
+            String resultado = cstmt.getString(1);
+            return resultado != null ? resultado : ""; // Devolver cadena vacía si es null
         }
     }
 
